# simprint-runtime

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: runtime-build-mac.yml  runtime-build-win.yml
scripts/: generate-latest-json-local.mjs  generate-latest-json.mjs  prepare-version.mjs  publish-github-release.mjs  resolve-release-version.mjs
src/: lib.rs  main.rs
src/app/: api.rs  bootstrap.rs  context.rs  error.rs  events.rs  host.rs  mod.rs  module.rs  state.rs
src/infrastructure/: mod.rs
src/infrastructure/diagnostics/: mod.rs
src/infrastructure/eventbus/: connection.rs  error.rs  global.rs  manager.rs  message.rs  mod.rs  topics.rs  transport.rs
src/infrastructure/ipc/: error.rs  message.rs  mod.rs  transport.rs
src/services/: mod.rs
src/services/auth/: mod.rs  types.rs
src/services/environment/: mod.rs  status.rs  status_manager.rs
src/services/environment/kernel/: cdp.rs  job.rs  launcher.rs  mod.rs  types.rs
src/services/sync/: mod.rs  types.rs
