[package]
name = "simprint-runtime"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "simprint-runtime"

[[bin]]
name = "simprint-runtime"
path = "src/main.rs"

[lib]
name = "simprint_runtime"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
bytes = "1"
rand = "0.8"
rmp-serde = "1.3"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std", "sync", "time", "net"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }
